# AutoRAG-example-korean-embedding-benchmark

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
config/: embedding_benchmark.yaml  reranker_benchmark.yaml
