[project]
name = "autorag-example-korean-embedding-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autorag[gpu]>=0.2.11",
    "click>=8.1.7",
    "llama-index-embeddings-cohere>=0.3",
    "llama-index-embeddings-upstage>=0.2.1",
    "python-dotenv>=1.0.1",
]
